Fixes the spacing at the bottom of the list

--- a/css/browser.css
+++ b/css/browser.css
@@ -260,6 +260,7 @@ img{
 #serverTable{
     position: relative;
     top: -30px;
+    margin-bottom: -30px;
 }
 
 #serverTable_wrapper{
